--- a/js-primer-ajax/package.json
+++ b/js-primer-ajax/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "TypeScript",
+  "name": "redux-tutorial",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -9,7 +9,7 @@
     "eslint": "^7.4.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "jest": "^26.1.0",
+    "jest": "24.9.0",
     "nodemon": "^2.0.4",
     "prettier": "^2.0.5",
     "ts-jest": "^26.1.2",
