テストがやばかったのを修正

--- a/js-primer-ajax/tsconfig.json
+++ b/js-primer-ajax/tsconfig.json
@@ -71,5 +71,5 @@
     "src/*/*.ts",
     "src/*.ts"
   ],
-  "exclude": ["node_modules","dist","test"]
+  "exclude": ["node_modules","dist","test","src/*.test.ts"]
 }
