change test direcctorys

--- a/js-primer-todo-with-react/tsconfig.json
+++ b/js-primer-todo-with-react/tsconfig.json
@@ -20,6 +20,6 @@
     "noEmit": true,
     "jsx": "react"
   },
-  "include": ["src/**/*", "test/index.test.tsx", "test/index.test.tsx", "test/index.test.tsx", "test/index.test.tsx"],
-  "exclude": ["node_modules", "dist", "test"]
+  "include": ["src/**/*", "src/test/index.test.tsx"],
+  "exclude": ["node_modules", "dist"]
 }
