--- a/js-primer-todo-with-react/package.json
+++ b/js-primer-todo-with-react/package.json
@@ -44,6 +44,7 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "jest": "24.9.0",
+    "jest-css-modules": "^2.1.0",
     "prettier": "^2.0.5",
     "ts-jest": "^26.1.3"
   }
